# xcodex

./: .gitignore  AGENTS.md  README.md  justfile  pnpm-workspace.yaml
codex-rs/async-utils/: Cargo.toml
codex-rs/utils/image/: Cargo.toml
codex-rs/utils/image/src/: lib.rs
codex-rs/wasm/app_server/: AGENTS.md  Cargo.toml  PLAN.md  README.md
codex-rs/wasm/app_server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  config_runtime.rs  in_process.rs  layout.rs  lib.rs  loaded_thread_event.rs  loaded_thread_runtime.rs  mapping.rs  message_processor.rs  models.rs  outgoing_message.rs  request_target.rs  root_request_runtime.rs  runtime_bootstrap.rs  skills_runtime.rs  state.rs  thread_history.rs  thread_mutation_runtime.rs  thread_resume_runtime.rs  thread_rollback_runtime.rs  thread_state.rs  wasm_rollout_adapter.rs
codex-rs/wasm/browser/: Cargo.toml
codex-rs/wasm/browser/src/: bootstrap_bridge.rs  event_bridge.rs  host.rs  jsonrpc_bridge.rs  layout.rs  lib.rs  mapping.rs  rpc.rs  runtime.rs  state.rs  thread_host.rs
codex-rs/wasm/core/: Cargo.toml  prompt.md  prompt_with_apply_patch_instructions.md  review_prompt.md
codex-rs/wasm/core/src/: auth.rs  bridge.rs  bridge_bindings.rs  bridge_runtime.rs  browser_runtime.rs  browser_runtime_bindings.rs  client.rs  client_common.rs  codex.rs  codex_pre_core_copy.rs  codex_tests.rs  codex_tests_guardian.rs  codex_tests_tool_suggest.rs  codex_thread.rs  compact_remote.rs  config_loader.rs  connectors.rs  custom_prompts.rs  default_client.rs  environment_context.rs  exec.rs  exec_policy.rs  features.rs  file_watcher.rs  function_tool.rs  history.rs  host.rs  instructions.rs  lib.rs  mcp_connection_manager.rs  mention_syntax.rs  message_history.rs  models.rs  parse_turn_item.rs  project_doc.rs  response_tool_loop.rs  review_prompts.rs  shell.rs  shell_snapshot.rs  state_db.rs  (+9 more)
codex-rs/wasm/core/src/agent/: control.rs
codex-rs/wasm/core/src/codex/: browser_runtime.rs  prompt.rs  review.rs  run_turn.rs  sampling.rs  session.rs  session_approvals.rs  session_events.rs  session_history_bootstrap.rs  session_mcp.rs  session_runtime.rs  session_setup.rs  spawn.rs  submission_handlers.rs  types.rs
codex-rs/wasm/core/src/compat/: api.rs  cancel.rs  mod.rs  rmcp.rs  shell_command.rs  task.rs
codex-rs/wasm/core/src/config/: mod.rs  types.rs
codex-rs/wasm/core/src/context_manager/: history.rs  mod.rs  updates.rs
codex-rs/wasm/core/src/instructions/: user_instructions.rs
codex-rs/wasm/core/src/mcp/: auth.rs  mod.rs
codex-rs/wasm/core/src/memories/: citations.rs  mod.rs  prompts.rs
codex-rs/wasm/core/src/models_manager/: collaboration_mode_presets.rs  collaboration_mode_presets_tests.rs  manager.rs  mod.rs  model_info.rs
codex-rs/wasm/core/src/rollout/: list.rs  metadata.rs  mod.rs  policy.rs  recorder.rs  session_index.rs
codex-rs/wasm/core/src/skills/: env_var_dependencies.rs  injection.rs  manager.rs  remote.rs
codex-rs/wasm/core/src/state/: service.rs  session.rs
codex-rs/wasm/core/src/tasks/: compact.rs  ghost_snapshot.rs  mod.rs  regular.rs  review.rs  undo.rs  user_shell.rs
codex-rs/wasm/core/src/tools/: PLAN.md  browser_host.rs  context.rs  handlers.rs  js_repl.rs  mcp_handler.rs  mod.rs  parallel.rs  registry.rs  router.rs  router_tests.rs  runtime.rs  spec.rs
codex-rs/wasm/core/src/tools/browser_builtin/: apply_patch.rs  collaboration.rs  grep_files.rs  list_dir.rs  mod.rs
codex-rs/wasm/core/src/tools/handlers/: PLAN.md
codex-rs/wasm/core/src/tools/runtimes/: PLAN.md
codex-rs/wasm/core/templates/review/: exit_success.xml
codex-rs/wasm/core/templates/search_tool/: tool_description.md
codex-rs/wasm_v2/browser/: Cargo.toml
codex-rs/wasm_v2/browser/src/: host.rs  lib.rs  mapping.rs  runtime.rs  state.rs
codex-rs/wasm_v2/core/: Cargo.toml
codex-rs/wasm_v2/core/src/: analytics_client.rs  auth.rs  client.rs  client_common.rs  codex.rs  codex_tests.rs  codex_tests_guardian.rs  commit_attribution.rs  compact.rs  config_loader.rs  connectors.rs  contextual_user_message.rs  custom_prompts.rs  default_client.rs  error.rs  event_mapping.rs  exec_policy.rs  features.rs  file_watcher.rs  git_info.rs  guardian.rs  lib.rs  mcp_connection_manager.rs  mentions.rs  model_provider_info.rs  network_policy_decision.rs  plugins.rs  realtime_conversation.rs  review_format.rs  review_prompts.rs  sandboxing.rs  shell.rs  shell_snapshot.rs  state_db.rs  stream_events_utils.rs  test_support.rs  time.rs  turn_diff_tracker.rs  turn_metadata.rs  turn_timing.rs  (+1 more)
codex-rs/wasm_v2/core/src/agent/: mod.rs  status.rs
codex-rs/wasm_v2/core/src/codex/: browser_runtime.rs  plan_mode.rs  review.rs  run_turn.rs  sampling.rs  session.rs  session_approvals.rs  session_context.rs  session_events.rs  session_history_bootstrap.rs  session_mcp.rs  session_runtime.rs  session_setup.rs  skills.rs  spawn.rs  submission.rs  submission_handlers.rs  types.rs
codex-rs/wasm_v2/core/src/compat/: api.rs  hooks.rs  mod.rs  network.rs  otel.rs  rmcp.rs
codex-rs/wasm_v2/core/src/config/: mod.rs
codex-rs/wasm_v2/core/src/context_manager/: history.rs  mod.rs  normalize.rs  updates.rs
codex-rs/wasm_v2/core/src/memories/: mod.rs
codex-rs/wasm_v2/core/src/models_manager/: collaboration_mode_presets.rs  model_info.rs
codex-rs/wasm_v2/core/src/rollout/: mod.rs  recorder.rs  session_index.rs
codex-rs/wasm_v2/core/src/skills/: injection.rs  mod.rs  model.rs
codex-rs/wasm_v2/core/src/state/: mod.rs  service.rs  session.rs  turn.rs
codex-rs/wasm_v2/core/src/tasks/: compact.rs  ghost_snapshot.rs  mod.rs  regular.rs  review.rs  undo.rs  user_shell.rs
codex-rs/wasm_v2/core/src/tools/: browser_host.rs  code_mode.rs  context.rs  discoverable.rs  dynamic_handler.rs  mcp_handler.rs  mod.rs  network_approval.rs  parallel.rs  registry.rs  router.rs  sandboxing.rs  spec.rs  tool_search_handler.rs  tool_search_handler_tests.rs  tool_suggest_handler.rs  tool_suggest_handler_tests.rs
codex-rs/wasm_v2/core/src/tools/browser_builtin/: read_file.rs
codex-rs/wasm_v2/core/templates/collaboration_mode/: default.md  plan.md
(+785 files in other folders)
