[package]
name = "codex-async-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
