[package]
name = "codex-wasm-v2-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_wasm_v2_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
