[package]
name = "codex-wasm-v2-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_wasm_v2_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-wasm-v2-core = { path = "../core" }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
