[package]
edition.workspace = true
license.workspace = true
name = "codex-wasm-core"
version.workspace = true

[lib]
doctest = false
name = "codex_wasm_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm_v1_core = []
wasm_v1_file_tools = ["wasm_v1_core"]
wasm_v1_transport_fetch = ["wasm_v1_core"]
wasm_disable_native_exec = []
wasm_disable_native_sandbox = []

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-string = { workspace = true }
futures = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
