[package]
edition.workspace = true
license.workspace = true
name = "codex-wasm-v2-browser"
version.workspace = true

[lib]
doctest = false
name = "codex_wasm_v2_browser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
