[package]
edition.workspace = true
license.workspace = true
name = "codex-wasm-v2-core"
version.workspace = true

[lib]
doctest = false
name = "codex_wasm_v2_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-app-server-protocol = { workspace = true }
codex-async-utils = { workspace = true }
codex-config = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-readiness = { workspace = true }
codex-utils-home-dir = { workspace = true }
codex-utils-stream-parser = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
codex-execpolicy = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
codex-api = { workspace = true }
codex-hooks = { workspace = true }
codex-network-proxy = { workspace = true }
codex-otel = { workspace = true }
codex-rmcp-client = { workspace = true }
codex-shell-command = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "sync",
    "time",
] }

[dev-dependencies]
codex-otel = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
core_test_support = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
